@@ -7,6 +7,8 @@ Version 1.3.12+svn:
     * Allow ThemeWML to display the race.
   * User interface
     * Display the race in the unit preview panel.
+    * changing the langugage now sets the version number in the title
+      properly.	
 
 Version 1.3.12:
  * campaigns:
